# RetroTime

./: .gitignore  AppImageBuilder.yml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  appimage-x86_64.sh  build+appimage.sh  io.github.joyrider3774.retrotime.yml  retrotime.rb  retrotime.yaml  vcpkg.json
.github/workflows/: build_linux_flatpak.yml  build_mac.yml  build_vcpkg.yml  build_windows.yml
metadata/rg35xxplusbatocera/: RetroTime.sh
metadata/trimuismartpro/: config.json  launch.sh
retrotimefs/data/: io.github.joyrider3774.retrotime.metainfo.xml
src/: CAudio.c  CAudio.cpp  CAudio.h  CFont.c  CFont.cpp  CFont.h  CGame.c  CGame.cpp  CGame.h  CHttp.cpp  CHttp.h  CImage.c  CImage.cpp  CImage.h  CInput.c  CInput.cpp  CInput.h  CSprites.c  CSprites.cpp  CSprites.h  CTween.c  CTween.cpp  CTween.h  Common.c  Common.cpp  Common.h  GetOpt.cpp  GetOpt.h  Intro.c  Intro.cpp  Intro.h  Platform.h  RetroTime.cpp  SubScoreScreen.c  SubScoreScreen.cpp  SubScoreScreen.h  TitleScreen.c  TitleScreen.cpp  TitleScreen.h  Types.h  (+3 more)
src/games/: BlockStackerBlocks.h  CGameBase.c  CGameBase.cpp  CGameBase.h  CGameBlockStacker.c  CGameBlockStacker.cpp  CGameBlockStacker.h  CGameBreakOut.c  CGameBreakOut.cpp  CGameBreakOut.h  CGameFastEddy.c  CGameFastEddy.cpp  CGameFastEddy.h  CGameFrog.c  CGameFrog.cpp  CGameFrog.h  CGameInvaders.c  CGameInvaders.cpp  CGameInvaders.h  CGamePang.c  CGamePang.cpp  CGamePang.h  CGameRamIt.c  CGameRamIt.cpp  CGameRamIt.h  CGameSnake.c  CGameSnake.cpp  CGameSnake.h  CSpriteObject.c  CSpriteObject.h
src/scoresubmit/: hmacsha1.cpp  hmacsha1.h  (+6 more)
